--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //coordinator layout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
     //Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
