--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         //Dagger Hilt
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
 
         //Navigation Safe Args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
